更新 信息安全.md
信息安全更新

--- a/信息安全.md
+++ b/信息安全.md
@@ -1,39 +1,41 @@
-### 第一章 信息安全基础知识
+# 网络与信息安全
 
-#### 1.1 信息安全的方法论
+## 第一章 网络信息安全概述
+
+### 第一节 网络信息安全
 
 信息安全的方法论是研究解决安全问题的方法，具体内容有：**理论分析、逆向分析、实验验证、技术实现**。
 
-
-
-#### 1.2 信息系统的安全层次
-
-- 设备安全：
-  - 设备稳定性：设备一定时间内不出故障的概率
-  - 设备可靠性：设备一定时间内正常运行的概率
-  - 设备可用性：设备随时可以正常使用的高绿
-- 数据安全：
-  - 数据秘密性：数据不被未授权的方使用的属性
-  - 数据完整性：数据保持真实与完整，不被篡改的属性
-  - 数据可用性：数据可以随时正常使用的概率
-- 内容安全：
-  - 政治健康
-  - 合法合规
-  - 符合道德规范
-- 行为安全：
-  - 行为秘密性：行为的过程和结果是秘密的，不影响数据的秘密性
-  - 行为完整性：行为的过程和结果是可预期，不影响数据的完整性
-  - 行为可控性：可及时发现、纠正、控制偏离预期的行为
-
-
-
-#### 1.3 信息安全管理体系
-
 信息安全管理体系包含：密码管理、网络管理、设备管理、人员管理
 
+渗透测试：许可的情况下，进行模拟攻击。
+
+漏洞扫描：基于漏洞数据库，进行监测。
+
+#### 1. 对安全的基本要求
+
+- 保密性：保护资源免遭非授权用户“读出”，包括传输信息的加密、存储信息加密。
+- 完整性：保护资源免遭非授权用户“写入”，包括数据完整性、软件完整性、操作系统完整性、内存及磁盘的完整性、信息交换的真实性和有效性。
+- 可用性：保护资源免遭破坏或干扰，包括防止病毒入侵和系统瘫痪、防止信道拥塞及拒绝服务、防止系统资源被非法抢占。
+- 可控性：对非法入侵提供检测与跟踪，并能干扰其入侵行为。
+- 可核查性：可追查安全事故的责任人，对违反安全策略的事件提供审计手段，能记录和追踪他们的活动。
 
 
-#### 1.4 风险管理
+
+#### 2. 安全策略和防御原则
+
+1. 防火墙和网络边界保护：通过配置防火墙、入侵检测系统(IDS)和入侵防御系统(IPS)等技术来监控和管理网络流量，以阻止未经授权的访问和攻击。
+2. 访问控制：实施强大的身份验证和授权机制，确保只有经过授权的用户能够访问敏感信息和系统资源。这可以通过密码、双因素认证、访问控制列表(ACL)等手段实现。
+3. 漏洞管理和补丁管理：定期对系统进行漏洞扫描和评估，及时应用安全补丁来修补已知的漏洞，以减少系统被攻击的风险。
+4. 安全意识培训：对员工进行定期的网络安全培训，提高他们对网络安全风险的认识，并教育他们正确的安全实践和行为。
+5. 监控和日志记录：部署监控系统来实时监视网络活动和安全事件，同时记录关键事件和日志，以便进行安全审计和调查。
+6. 灾备和业务连续性计划：建立完善的灾备和业务连续性计划，以应对网络攻击、自然灾害等突发事件，确保业务能够在紧急情况下持续运行。
+7. 供应链安全：审查和监管供应链中的安全实践，确保供应商和合作伙伴符合您的安全标准，并减少因供应链攻击而导致的风险。
+8. 持续改进：定期评估和更新安全策略、控制措施和技术，以适应不断演变的威胁和安全环境，保持对网络安全的持续关注和改进。
+
+
+
+#### 3. 风险管理
 
 系统外部可能造成的损害，成为威胁；系统内部可能造成损害，成为脆弱性。系统风险则是威胁利用脆弱性造成损坏的可能性。
 
@@ -45,9 +47,7 @@
 
 
 
-### 第二章 安全法规和标准
-
-#### 2.1 侵权的判断
+#### 4. 侵权的判断
 
 考察判断侵权行为：凡是侵权人主观上具有故意或过失对著作权法和计算机软件保护条例保护的软件人身权和财产权实施侵害的行为的，都构成计算机软件的侵权行为。
 
@@ -69,15 +69,33 @@
 
 
 
+#### 5. 信息的存储传输安全
 
 
-##### 网络安全策略和防御原则
 
-1. 防火墙和网络边界保护:通过配置防火墙、入侵检测系统(IDS)和入侵防御系统(IPS)等技术来监控和管理网络流量，以阻止未经授权的访问和攻击。
-2. 访问控制:实施强大的身份验证和授权机制，确保只有经过授权的用户能够访问敏感信息和系统资源。这可以通过密码、双因素认证、访问控制列表(ACL)等手段实现。
-3. 漏洞管理和补丁管理:定期对系统进行漏洞扫描和评估，及时应用安全补丁来修补已知的漏洞，以减少系统被攻击的风险。
-4. 安全意识培训:对员工进行定期的网络安全培训，提高他们对网络安全风险的认识，并教育他们正确的安全实践和行为。
-5. 监控和日志记录:部署监控系统来实时监视网络活动和安全事件，同时记录关键事件和日志，以便进行安全审计和调查。
-6. 灾备和业务连续性计划:建立完善的灾备和业务连续性计划，以应对网络攻击、自然灾害等突发事件，确保业务能够在紧急情况下持续运行。
-7. 供应链安全:审查和监管供应链中的安全实践，确保供应商和合作伙伴符合您的安全标准，并减少因供应链攻击而导致的风险。
-8. 持续改进:定期评估和更新安全策略、控制措施和技术，以适应不断演变的威胁和安全环境，保持对网络安全的持续关注和改进。
+
+
+## 第二章 计算机病毒
+
+### 1.6 网络攻击手段
+
+
+
+## 第三章 加密与认证技术
+
+
+
+## 第四章 防火墙技术
+
+
+
+## 第五章 构建网络服务器
+
+
+
+## 第六章 Windows系统管理
+
+
+
+## 第七章 Linux系统管理
+
