--- a/网络与信息安全.md
+++ b/网络与信息安全.md
@@ -8,9 +8,7 @@
 
 信息安全管理体系包含：密码管理、网络管理、设备管理、人员管理
 
-渗透测试：许可的情况下，进行模拟攻击。
 
-漏洞扫描：基于漏洞数据库，进行监测。
 
 #### 1. 对安全的基本要求
 
@@ -35,49 +33,31 @@
 
 
 
-#### 3. 风险管理
+渗透测试：许可的情况下，进行模拟攻击。？
 
-系统外部可能造成的损害，成为威胁；系统内部可能造成损害，成为脆弱性。系统风险则是威胁利用脆弱性造成损坏的可能性。
-
-风险评估的系统体系包含：系统基本情况分析，系统安全状况调查，系统安全组织，政策分析，系统弱点，漏洞分析等。
-
-风险评估常用的方法有：**层次分析法**。
-
-在实施分险控制后，仍会存在风险，成为**剩余风险**。风险接受是一个对剩余风险进行确认、评价、接受的过程。
+漏洞扫描：基于漏洞数据库，进行监测。？
 
 
 
-#### 4. 侵权的判断
+网络攻击类型
 
-考察判断侵权行为：凡是侵权人主观上具有故意或过失对著作权法和计算机软件保护条例保护的软件人身权和财产权实施侵害的行为的，都构成计算机软件的侵权行为。
+病毒、蠕虫、特洛伊木马、网络钓鱼ddos，dos，
 
-（1）未经软件著作权人的同意而发表其软件作品。
+网络扫描，端口扫描
 
-（2）将他人开发的软件当做自己的作品发表。
+未经授权访问，数据泄露
 
-（3）未经合作者的同意将与他人合作开发的软件当做自己独立完成的作品发表。
+零日漏洞
 
-（4）在他人开发的软件上署名或涂改他人开发的软件上的署名。
-
-（5）经软件著作权人的同意修改、翻译、注释其软件作品。（**职务作品的计算机软件，参与开发的人员离开原单位后，如其对原单位享有著作权的软件进行修改、提高，应经过原单位许可，否则构成侵权**）
-
-（6）未经软件著作人的同意，复制或部分复制其软件作品。
-
-（7）未经软件著作人同意，向公众发行、展示其软件的复制品。
-
-（8）未经软件著作人同意，向任何第三方办理软件权利许可或转让事宜。
-
-
-
-#### 5. 信息的存储传输安全
-
-
+电子邮件漏洞
 
 
 
 ## 第二章 计算机病毒
 
 ### 1.6 网络攻击手段
+
+
 
 
 
