--- a/网络与信息安全.md
+++ b/网络与信息安全.md
@@ -1,8 +1,8 @@
 # 网络与信息安全
 
-## 第一章 网络信息安全概述
+## 网络信息安全概述
 
-### 第一节 网络信息安全
+### 网络信息安全
 
 信息安全的方法论是研究解决安全问题的方法，具体内容有：**理论分析、逆向分析、实验验证、技术实现**。
 
@@ -10,7 +10,7 @@
 
 
 
-#### 1. 对安全的基本要求
+#### 对安全的基本要求
 
 - 保密性：保护资源免遭非授权用户“读出”，包括传输信息的加密、存储信息加密。
 - 完整性：保护资源免遭非授权用户“写入”，包括数据完整性、软件完整性、操作系统完整性、内存及磁盘的完整性、信息交换的真实性和有效性。
@@ -20,7 +20,7 @@
 
 
 
-#### 2. 安全策略和防御原则
+#### 安全策略和防御原则
 
 1. 防火墙和网络边界保护：通过配置防火墙、入侵检测系统(IDS)和入侵防御系统(IPS)等技术来监控和管理网络流量，以阻止未经授权的访问和攻击。
 2. 访问控制：实施强大的身份验证和授权机制，确保只有经过授权的用户能够访问敏感信息和系统资源。这可以通过密码、双因素认证、访问控制列表(ACL)等手段实现。
@@ -33,9 +33,9 @@
 
 
 
-渗透测试：许可的情况下，进行模拟攻击。？
+渗透测试是一种模拟攻击的过程，目的是评估系统的安全性。渗透测试人员会尝试通过已知或未知的漏洞攻击系统，以验证漏洞的实际可利用性和潜在影响。**手动与自动结合**：虽然可以使用工具进行一些步骤，但渗透测试通常需要手动干预，以便更深入地模拟真实攻击。
 
-漏洞扫描：基于漏洞数据库，进行监测。？
+漏洞扫描是自动化工具用于识别计算机系统、网络或应用程序中的已知漏洞的过程。扫描工具会检查系统的配置、操作系统、应用程序等，寻找可能被攻击者利用的弱点。能够覆盖大量的潜在漏洞，包括未打补丁的软件、弱密码等。
 
 
 
@@ -51,31 +51,31 @@
 
 电子邮件漏洞
 
-
-
-## 第二章 计算机病毒
-
-### 1.6 网络攻击手段
+XSS攻击
 
 
 
-
-
-## 第三章 加密与认证技术
-
-
-
-## 第四章 防火墙技术
+## 计算机病毒
 
 
 
-## 第五章 构建网络服务器
+
+
+## 加密与认证技术
 
 
 
-## 第六章 Windows系统管理
+## 防火墙技术
 
 
 
-## 第七章 Linux系统管理
+## 构建网络服务器
+
+
+
+## Windows系统管理
+
+
+
+## Linux系统管理
 
