--- a/计算机网络.md
+++ b/计算机网络.md
@@ -1004,7 +1004,7 @@ IPv6的主要优势体现在以下几方面
 IPv6 转换为 IPv4 的策略通常涉及以下几种方法：
 
 1. 双栈：在网络设备上同时启用 IPv4 和 IPv6。支持 IPv4 和 IPv6 的设备能够无缝通信。
-2. 隧道: 在 IPv4 网络中封装 IPv6 数据包。例如使用 6to4 或 Teredo 隧道。可以在现有的 IPv4 基础设施上传输 IPv6 数据。**隧道协议中工作在网络层的是IPSec，**
+2. 隧道: 在 IPv4 网络中封装 IPv6 数据包。例如使用 6to4 或 Teredo 隧道。可以在现有的 IPv4 基础设施上传输 IPv6 数据。**隧道协议中工作在网络层的是IPSec，IPSec协议具有身份认证功能，可以拒绝DOS攻击**
 
 
 
