--- a/新技术.md
+++ b/新技术.md
@@ -2,12 +2,12 @@
 
 #### 大数据
 
-大数据（Big Data）是一种用于描述无法通过传统方法有效处理的海量数据集的概念。大数据具有4V特性：
+大数据是一种用于描述**现在和过去**的无法通过传统方法有效处理的海量数据集的概念。大数据具有4V特性：
 
 1. **规模大**：数据规模极为庞大，通常以TB、PB甚至EB计。
 2. **多样性**：数据类型多样化，**如结构化数据（数据库）、非结构化数据（文本、视频）、半结构化数据（JSON、XML等）**。
 3. **高速性**：数据生成和处理速度极快，需要实时或近实时处理。
-4. **真实性**：数据质量参差不齐，**需要进行数据清理和验证来保证可靠性**。
+4. **价值密度低**：数据质量参差不齐，**需要进行数据清理和验证来保证可靠性**。
 
 | 组件 | 功能描述 | 常见技术 |
 | ---- | -------- | -------- |
@@ -17,7 +17,7 @@
 | 数据分析 | 数据挖掘、机器学习等分析操作 | Hive、MLlib |
 | 数据可视化 | 展示分析结果，支持业务决策 | Tableau、PowerBI |
 
-大数据的未来趋势包括数据隐私保护、多云环境、实时数据处理、以及人工智能与大数据的深度融合。
+大数据的未来趋势包括数据隐私保护、多云环境、实时数据处理、以及人工智能与大数据的深度融合。**数据使用的关键是数据再利用**。
 
 
 
@@ -25,18 +25,18 @@
 
 云计算是一种通过互联网按需交付计算资源的模式，按使用量付费，提供高可扩展性、高弹性和高可用性。它改变了传统IT资源的使用方式，企业无需自行搭建和维护物理服务器，而是从云服务提供商处获取所需的资源。**云技术基础架构是并行计算、分布式计算、网格计算的发展，虚拟化是云计算的重要支撑技术**。按照服务类型可以分为：
 
-- **软件即服务 SaaS**
-- **平台即服务 PaaS**
-- **基础设施即服务 LaaS**
+- **软件即服务 SaaS （software）** 
+- **平台即服务 PaaS （platform）** 
+- **基础设施即服务 LaaS （infrastructureasa）** 
 
 
 
 #### 区块链
 
-区块链是一种**去中心化**、**分布式账本**技术，能够保证数据的透明、安全和不可篡改。它主要通过**共识算法**和**加密技术**，在不依赖第三方中介的情况下实现数据的一致性和信任。区块链的基本结构：
+区块链是一种**去中心化**、**分布式账本**技术，能够保证数据的透明、安全和不可篡改。它主要通过**共识算法**和**加密技术**，**在不依赖第三方中介的情况下实现数据的一致性和信任，永久记录网络中的对等节点之间发生的资产交易记录**。区块链的基本结构：
 
-- **区块（Block）：** 每个区块包含数据、时间戳、前一个区块的哈希值和本区块的哈希值。
-- **链（Chain）：** 每个区块通过前一个区块的哈希值连接形成区块链。
+- **区：** 每个区块包含数据、时间戳、前一个区块的哈希值和本区块的哈希值。
+- **链：** 每个区块通过前一个区块的哈希值连接形成区块链。
 - **哈希算法：** 用于生成唯一的摘要，保证数据不可篡改。
 
 | 特点     | 解释                                     |
@@ -46,6 +46,8 @@
 | 不可篡改 | 一旦写入区块链，数据就不能被修改或删除   |
 | 安全性   | 使用加密技术确保数据和交易的安全         |
 | 共识机制 | 多个节点通过共识算法共同决定数据的有效性 |
+
+区块链技术原理上可以保障绝对的安全性，但是可以通过共识修改算法进行修改。
 
 
 
@@ -61,12 +63,7 @@
 | 计算机视觉          | 使机器能够识别和理解图像和视频             | 图像分类、目标检测、图像分割             |
 | 强化学习（RL）      | 通过与环境交互，基于反馈优化策略           | Q-learning、深度Q网络（DQN）             |
 
-监督学习是一种机器学习方法，通过使用**带标签的数据集**来训练模型。模型学习输入数据和对应标签之间的映射关系，然后用于对**未知数据**进行预测。常用于**分类**和**回归**问题。监督学习算法的主要任务是**分类**或**回归**：
-
-| 类型 | 描述                     | 常见算法                     | 应用场景               |
-| ---- | ------------------------ | ---------------------------- | ---------------------- |
-| 分类 | 将输入数据分配到不同类别 | 逻辑回归、SVM、决策树        | 垃圾邮件检测、人脸识别 |
-| 回归 | 预测连续数值型数据       | 线性回归、随机森林、神经网络 | 房价预测、销量预测     |
+监督学习是一种机器学习方法，通过使用**带标签的数据集**来训练模型。模型学习输入数据和对应标签之间的映射关系，然后用于对**未知数据**进行预测。常用于**分类**和**回归**问题。**监督学习算法的主要任务是分类或回归**：
 
 常见的监督学习算法包含：
 
@@ -80,25 +77,25 @@
 | K-近邻（KNN）     | 基于邻近样本的标签进行分类或回归         | 图像识别、推荐系统     |
 | 神经网络          | 模仿人脑结构，通过多层神经元处理复杂数据 | 自然语言处理、图像识别 |
 
+**机器学习三要素：模型、策略、算法。**
+
+图灵测试来源于图灵写于1950年的一篇论文《计算机器与智能》，指测试者与被测试者(一个人和一台机器)隔开的情况下，通过一些装置向被测试者随意提问。进行多次测试后，如果有**超过30%的测试者**不能确定出被测试者是人还是机器，那么这台机器就通过了测试，并被认为具有人类智能。
+
 
 
 #### 5G技术
 
 5G 是第五代移动通信技术，相比于 4G，5G 拥有更高的**速度**、更低的**延迟**、更大的**连接容量**。它支持**海量设备互联**和**高可靠低延时通信**，推动了物联网（IoT）、自动驾驶、工业互联网等新兴技术的发展。
 
-| **技术**                        | **描述**                                     |
-| ------------------------------- | -------------------------------------------- |
-| **毫米波（mmWave）**            | 使用 24-100 GHz 的高频段频谱，提供超高速连接 |
-| **大规模MIMO**                  | 使用大量天线提高频谱效率和覆盖范围           |
-| **波束成形（Beamforming）**     | 将信号集中传送到特定用户，提高通信质量       |
-| **边缘计算（MEC）**             | 将计算能力下沉至网络边缘，降低延迟           |
-| **网络切片（Network Slicing）** | 在单一物理网络中虚拟化多个逻辑网络           |
+**5G无线接入的关键技术包括：大规模天线阵列、超密集组网(UDN)、全频谱接入、新型多址、新型多载波、终端直连。**
 
 
 
 #### VR虚拟现实
 
 虚拟现实（Virtual Reality, VR）是一种利用计算机技术生成逼真的三维虚拟环境，并让用户通过视觉、听觉、触觉等感官沉浸其中的技术。VR 改变了人们与数字世界的交互方式，被广泛应用于**游戏、教育、医疗、工业**等多个领域。
+
+**虚拟现实技术的重要特性包括：沉浸性(临场感、存在感)、实时交互性、多感知性、自主性**。
 
 | **组成部分**            | **描述**                                      |
 | ----------------------- | --------------------------------------------- |
@@ -119,34 +116,75 @@
 
 ### 金融相关科技
 
-#### 金融科技
+#### 金融科技概述
 
-金融科技活动主要分为支付结算、存贷款与资本筹集、投资管理、市场设施（包括分布式账户）四类。
-
-其中，支付结算包括包含手机和网络支付、电子货币以及区块链等；存贷款与资本筹集包括众筹、P2P网贷、电子货币、区块链等；投资管理包含机器人投资顾问、电子自动交易、智慧合同等；市场设施包括电子聚合器、大数据、云计算、电子身份认证等。
-
-金融科技指**金融和信息技术**的融合型产业。
+金融科技金融科技指**金融和信息技术**的融合型产业，是基于大数据、云计算、人工智能、区块链等一系列技术创新，全面应用于支付清算、借贷融资、财富管理、零售银行、保险、交易结算等六大金融领域，是金融业未来的主流趋势。
 
 金融科技业务呈现**脱媒、去中心化、定制化**为主要特征。
 
 金融科技主要包括**互联网和移动支付、网络信贷、智能金融理财服务、区块链技术**。
 
+**法定代表人是机构信息科技风险管理的第一责任人**。
+
+
+
 #### 信息科技风险
 
 **业务中断风险**
 
+**保障业务连续性是商业银行信息科技安全工作中最重要的组成部分**。但是，目前银行业信息科技系统基础建设滞后于业务的高速增长，而且银行的信息科技风险防范意识还没有上升到应用高度，信息系统的健壮性还远远不够，潜在着诸多可能导致生产中断的风险隐患。
+
 **数据安全风险**
+
+数据安全风险包括两方面的含义。一是**数据窃取**。数据遭窃取不仅会导致客户信息资料外泄和企业竞争力的下滑，更严重的是引发客户不满，甚至诉诸法，引发法律风险问题。二是**数据丢失**，即由于自然灾害、房屋倒塌等突发事件造成的存储介质毁坏，导致存储介质中部分或全部数据丢失。数据的丢失则造成银行业务完全无法开展，其后果的严重性不堪设想。
 
 **电子银行风险**
 
+电子银行风险主要指的是**电子支付安全问题**，包括利用信用卡和ATM进行诈骗，或者利用钓鱼网站、木马程序盗取客户的账号和密码等一系列的犯罪行为。
+
 **系统漏洞风险**
 
+系统漏洞风险是指银行应用系统的设计者由于对业务流程不熟悉，对风险点未能全盘考虑，导致**系统存在缺陷进而被发现并利用**。将手中假钞与ATM中真钞进行兑换等。
+
 **IT外包风险**
+
+IT外包风险首先在于服务商能否长期稳定地为银行提供高质量服务，对于信息系统故障能否及时响应并修复，以保障银行业务的连续性。其次，外包服务商在和银行密切往来过程中会获取一些银行的内部机密信息，给银行带来商业秘密泄露的风险。再次，银行对于外包服务商的过度依赖性也是一种风险，将导致银行在合同谈判中处于不利地位，同时也会造成银行自身员工IT服务水平和创新能力受到限制。
+
+
+
+#### 风险管理策略
+
+1. 建立**完善**的信息科技**风险管理制度**
+2. 构建全面的信息科技风险**监测和保障体系**
+3. 积极推进**信息科技队伍建设**，提高IT服务水平
+4. 鼓励信息科技风险防范技术创新性研究
+5. 提高IT外包服务管理的精细度
+
+
+
+#### 风险整合观
+
+COSO从四类目标、八大要素和四层企业内部的不同层次的单元构成了三维视角的企业全面风险管理的模型。
+
+四大目标包括：战略、经营、报告与合规目标;
+
+八大要素包括：内部环境、目标设定、事项识别、风险评估、风险应对、控制活动、信息沟通和监控;
+
+四大层面包括：主体层次、分布、业务单位、子公司。
 
 
 
 #### 银行数据中心选址
 
-数据中心包含：生产中心和灾难备份中心。
+数据中心包**括生产中心和灾难备份中心**。
 
-银行数据中心选址要考虑：地理位置、社会及当地人力资源、水电气配套设施条件、建设和运营成本、周边环境要求、园区政策。
+银行数据中心选址考察的因素包括以下六方面：
+
+1. **地理位置、自然条件、自然环境**。应远离地震、台风、洪水等自然灾然易发地区，气候条件舒适稳定，环境清洁，应尽可能方便而非偏远，其地理位置应利于交通与通讯。
+2. **社会及当地的人力资源条件**。主要考察当地经济文化发展水平、科技教育环境、交通便利条件、人力资源供应及水平等方面，数据中心作为信息技术的集中体现，对各种社会资源的要求都非常高。
+3. **当地的水、电、气配套的设施条件**。数据中心的业务特点以及其质量和容量的要求，决定了数据中心对当地供电能力的要求，供电量必须充足和稳定。
+4. **建设和运营的成本因素**。对于一个建设项目来说，成本必然是一个必须反复权衡的因素。成本涉及到当地规划及土地价格、房屋建筑价格、租赁和物业价格、网络通讯费用、用电价格、用水价格、人力成本和当地消费水平等多发因素。
+5. **所在地的周边环境条件**。选址应避开产生粉尘、油烟、有害气体，以及生产或贮存腐蚀性、易燃、易爆物产品的工厂、仓库等，远离高速路、**铁路1500米以上，以避免震动对于主机的影响**。
+6. **园区政策，当地政府提供的政策**。良好的政策环境将有利于一个基地气候的形成，促进客户的选择和落户。
+
+银行数据中心选址一般适合在高新技术产业园区
