--- a/数据结构.md
+++ b/数据结构.md
@@ -2,17 +2,65 @@
 
 ## 数据结构与算法
 
+数据：即信息的载体，是对客观事物的符号表示，指能输入到计算机中并被计算机程序处理的符号的总称。整数，实数，字符，文字，声音，图形，图像等都是数据。
 
+数据元素：是数据的基本单位，一般由一个或多个数据项组成。数据项是不可分割的、含有独立意义的最小数据单位。
+
+数据结构：是反映数据元素之间存在一种或多种特定关系的数据元素的集合的表示，即带有结构的数据元素的集合。
+
+
+
+数据的基本结构：集合结构、线性结构、树形结构、图形结构。
+
+逻辑上可以分为：线性结构、非线性结构。
+
+数据的存储方式：顺序、链式、索引、散列。
+
+
+
+算法是对特定问题求解步骤的一种描述，是用来解决某个问题的一些指令的集合。它是指令的有限序列，其中每条指令表示一个或多个操作。算法的特性：有穷性、确定性、可行性、输入和输出。评价算法优劣标准：正确性、可读性、健壮性、高效率与低存储量需求。
+
+
+
+时间复杂度是衡量算法运行时间与输入规模之间关系的一种方法。常见的时间复杂度有：
+
+1. **O(1)**：常数时间复杂度，执行时间不随输入规模变化。
+2. **O(log n)**：对数时间复杂度，通常出现在二分查找等算法中。
+3. **O(n)**：线性时间复杂度，执行时间与输入规模成正比。
+4. **O(n log n)**：线性对数时间复杂度，常见于高效的排序算法，如归并排序和快速排序。
+5. **O(n²)**：平方时间复杂度，常见于简单的排序算法，如冒泡排序和选择排序。
+6. **O(2^n)**：指数时间复杂度，通常出现在解决组合问题的递归算法中。
+7. **O(n!)**：阶乘时间复杂度，通常出现在排列问题中。
+
+
+
+**算法十数据结构=程序。**
 
 
 
 ## 线性表、栈、队列
 
+线性表有一个开始节点和一个结束节点，其余的内部节点有且仅有一个直接前驱和一个直接后继。
 
+线性表的顺序存储结构：数组，数组的存储空间是连续的，元素在存储空间按照逻辑顺序依次存放。
+
+线性表的链式存储结构：链表，有单链表，循环链表，双向链表
+
+
+
+栈的进出原则，先进后出
+
+
+
+队列栈的进出原则，先进先出
 
 
 
 ## 二叉树
+
+二叉树的第 i 层上至多含有 `2^(i - 1)`个节点
+
+
 
 
 
