--- a/数据结构.md
+++ b/数据结构.md
@@ -58,12 +58,94 @@
 
 ## 二叉树
 
-二叉树的第 i 层上至多含有 `2^(i - 1)`个节点
+二叉树是一种特殊的树形数据结构，每个节点最多只能有两个子节点（通常称为左子节点和右子节点）。
 
+1. 二叉树第 i 层上至多含有 `2^(i - 1)`个节点。
+2. 深度为 k 的二叉树至多含有`2^k - 1 `个节点
+3. 对于任意一棵二叉树，度为0的节点比度为2的节点多一个。`n_0 = n_2 + 1`
 
+**完全二叉树**：除了最底层外，每一层都被完全填满，并且最底层的节点尽量向左对齐。
+
+**满二叉树**：满二叉树的每一层都被完全填满。
+
+``` javascript
+// 完全二叉树
+       1
+      / \
+     2   3
+    / \ 
+   4  5
+
+// 满二叉树
+       1
+      / \
+     2   3
+    / \ / \
+   4  5 6  7
+```
+
+**遍历方式**：二叉树的遍历方式有：
+
+- **前**序遍历（**根**->左->右）
+- **中**序遍历（左->**根**->右）
+- **后**序遍历（左->右->**根**）
+- 层序遍历（按层访问）
 
 
 
 
 
 ## 查找与排序
+
+线性表
+
+顺序查找
+
+二分查找，如果中间项 `mid = left + (right - left) // 2` 向下取整
+
+```javascript
+3 6 8 10 12 15 16 18 21 25 30 查找 11
+11 < 15
+11 > 8
+11 > 10 // mid 向下取整
+11 < 12
+// 11 不存在
+```
+
+
+
+直接插入排序
+
+```javascript
+10 1 9 2 8 4排序
+1 10
+1 9 10
+1 2 9 10
+1 2 8 9 10
+1 2 4 8 9 10
+```
+
+希尔排序
+
+
+
+冒泡排序
+
+
+
+快速排序
+
+
+
+选择排序
+
+
+
+归并排序
+
+
+
+
+
+
+
