--- a/数据结构.md
+++ b/数据结构.md
@@ -48,11 +48,9 @@
 
 
 
-栈的进出原则，先进后出
+**栈的进出原则，先进后出**
 
-
-
-队列栈的进出原则，先进先出
+**队列栈的进出原则，先进先出**
 
 
 
@@ -95,7 +93,7 @@
 
 
 
-## 查找与排序
+## 查找
 
 线性表
 
@@ -114,6 +112,8 @@
 
 
 
+## 排序
+
 直接插入排序
 
 ```javascript
@@ -125,23 +125,15 @@
 1 2 4 8 9 10
 ```
 
-希尔排序
+希尔排序：选择一个初始间隔 `gap`（一般为数组长度的一半），将数组按间隔分组。对每组使用**插入排序**进行排序。减小间隔，重复步骤2，直到间隔为1。最后进行一次标准的插入排序。
 
+冒泡排序：逐步将最大或最小的元素**冒泡**到一端，遍历数组，相邻元素比较，如果顺序错误就交换，对未排序部分重复上述步骤，直到数组有序。
 
+快速排序：使用分治法，通过选定一个基准元素（pivot）将数组分为两部分递归排序，继续对左右子数组递归执行快速排序。
 
-冒泡排序
+选择排序：遍历数组找到最小元素，与第一个元素交换，从剩余部分中找到最小元素，与第二个元素交换
 
-
-
-快速排序
-
-
-
-选择排序
-
-
-
-归并排序
+归并排序：将数组递归拆分成两个子数组，直到每个子数组只剩一个元素。合并两个有序子数组时，按大小顺序放回原数组。重复直到所有子数组合并完成。
 
 
 
