--- a/数据库与数据挖掘.md
+++ b/数据库与数据挖掘.md
@@ -216,7 +216,7 @@ COMMIT;  -- 提交事务
 ROLLBACK;  -- 回滚事务
 ```
 
-#### 数据库概念
+#### 数据库优化
 
 ##### 索引
 
@@ -231,7 +231,6 @@ ROLLBACK;  -- 回滚事务
 | **主键列**：通常为主键列自动创建唯一索引。                   | **低选择性列**：具有少量唯一值的列（例如，性别、国家），索引的效果不明显。 |
 | **外键列**：为了提高连接性能，可以在外键列上创建索引。       | **大文本列**：如 `BLOB` 或 `TEXT` 类型的列，索引通常无效且开销大。 |
 | **高选择性列**：具有大量不同值的列（例如，邮箱地址、用户ID），有助于提高查询性能。 | **临时表或小表**：在小表上创建索引通常不会带来显著性能提升，反而增加维护成本。 |
-|                                                              |                                                              |
 
 ```sql
 CREATE INDEX idx_employee_name ON employee(name);
