--- a/计算机网络.md
+++ b/计算机网络.md
@@ -1080,6 +1080,86 @@ IP组播使用特定的地址范围：**224.0.0.0/4**，即从224.0.0.0到239.25
 
 
 
+#### 常见的网络端口
+
+以下是对不同网络端口的详细说明，涵盖其功能、用途和连接方式：
+
+1. RJ-45 端口
+
+   - **类型**：以太网端口
+
+   - **应用**：用于连接局域网，常见于网络交换机和路由器。
+
+   - **连接方式**：使用双绞线（通常为CAT5或CAT6）连接网络设备。
+
+2. 高速同步串口
+
+   - **类型**：串行端口
+
+   - **应用**：用于路由器与广域网（WAN）的连接，支持DDN、帧中继、X.25和PSTN等网络。
+
+   - **特点**：同步传输，数据速率较高，适合需要实时数据传输的场景。
+
+3. ISDN BRI 端口
+
+   - **类型**：数字用户线路
+
+   - **应用**：通过ISDN线路连接路由器与Internet或其他网络。
+
+   - **连接方式**：采用RJ-45标准，与ISDN NT1设备连接时使用RJ-45-to-RJ-45直通线。
+
+   - **特点**：支持语音和数据同时传输，适合小型企业。
+
+4. 异步串口（ASYNC）
+
+   - **类型**：串行端口
+
+   - **应用**：主要用于与调制解调器或Modem池的连接，以实现远程计算机通过PSTN拨号接入。
+
+   - **特点**：数据传输速率较低，不要求同步，常用于旧版设备或低带宽需求的应用。
+
+5. Console 端口
+
+   - **类型**：控制端口
+
+   - **应用**：通过专用电缆连接至计算机的串口，利用终端仿真程序进行路由器的本地配置。
+
+   - **连接方式**：路由器的Console端口为RJ-45口。
+
+   - **特点**：用于设备初始配置和故障排除，通常在没有网络连接的情况下使用。
+
+6. AUX 端口
+
+   - **类型**：辅助控制端口
+
+   - **应用**：用于路由器的远程配置。
+
+   - **连接方式**：外观与RJ-45端口相似，但内部电路不同。与调制解调器连接时需要使用RJ-45 to DB9或RJ-45 to DB25适配器进行转换。
+
+   - **特点**：支持硬件流控，常用于拨号访问路由器进行管理和配置。
+
+7. 光纤端口（SC 端口）
+
+   - **类型**：光纤连接端口
+   - **应用**：用于高速网络连接，特别是连接服务器的光纤网卡。可提供千兆数据传输速率。
+   - **特点**：SC端口以其可靠性和易于连接的特性而广泛应用于数据中心和企业网络。
+
+8. GBIC 端口
+
+   - **类型**：可插拔模块
+   - **应用**：用于安装GBIC模块，支持千兆位网络连接。
+   - **功能**：GBIC模块将电信号转换为光信号，实现网络信号的传输。
+   - **特点**：GBIC模块是热插拔的，便于在网络运行中进行更换和维护。
+
+9. SFP 端口
+
+   - **类型**：小型可插拔模块
+   - **应用**：与GBIC类似，但体积更小，适用于空间有限的设备。
+   - **功能**：SFP模块同样将电信号转换为光信号，用于千兆位及更高速度的网络连接。
+   - **特点**：体积减少一半，相较于GBIC，更加节省空间，适合现代高密度网络环境。
+
+
+
 #### 常见协议
 
 ##### IP
