--- a/操作系统.md
+++ b/操作系统.md
@@ -1,10 +1,10 @@
 # 操作系统
 
-## 操作系统概论
+## 操作系统概述
 
 
 
-## 多道程序设计
+## 进程与线程
 
 
 
@@ -16,16 +16,4 @@
 
 
 
-## 死锁
-
-
-
-## 进程管理
-
-
-
-## 处理机调度
-
-
-
-## 存储管理
+## 输入输出管理
