--- a/网络安全.md
+++ b/网络安全.md
@@ -1,12 +1,15 @@
-# 网络与信息安全
-
-## 网络信息安全概述
+# 网络安全
 
 ### 网络信息安全
 
+网络安全:计算机网络安全是指计算机、网络系统的硬件、软件以及系统中的数据受到保护，不因偶然的或恶意的原因而遭到破坏、更改、泄露，确保系统能连续和可靠地运行，使网络服务不中断。广义上说，凡是涉及网络上信息的保密性、完整性、可用性、真实性和可
+控性的相关技术和理论，都是网络安全所要研究的领域。
+
+网络安全涉及的主要内容：**运行系统的安全、信息系统的安全、信息传播的安全和信息内容的安全。**
+
 信息安全的方法论是研究解决安全问题的方法，具体内容有：**理论分析、逆向分析、实验验证、技术实现**。
 
-信息安全管理体系包含：密码管理、网络管理、设备管理、人员管理
+信息安全管理体系包含：**密码管理、网络管理、设备管理、人员管理**。
 
 
 
@@ -39,41 +42,118 @@
 
 漏洞扫描：基于漏洞数据库，进行监测。？
 
+蜜罐
+
+嗅探
+
+
+
+溢出攻击
+
+
+
 网络攻击类型
 
-病毒、蠕虫、特洛伊木马、网络钓鱼ddos，dos，
+恶意软件：病毒、蠕虫、特洛伊木马
+
+计算机病毒是指在计算机程序中插入的破坏计算机功能或毁坏数据，影响计算机使用，并能自我复制的一组计算机指令或程序。
+
+熊猫烧香、红色代码、爱虫病毒、勒索病毒都属于蠕虫病毒。
+
+冰河是木马程序。
+
+感染exe可执行文件，com命令文件，dll，sys，wxd文件
+
+宏病毒，word，excel文件
+勒索病毒 445端口
+
+
+
+网络钓鱼
+
+社会工程学攻击
+
+
+
+ddos，dos，肉鸡
+
+
 
 网络扫描，端口扫描
 
+
+
 未经授权访问，数据泄露
+
+
 
 零日漏洞
 
-电子邮件漏洞
+
+
+电子邮件利用
 
 
 
-## 计算机病毒
+### 加密
+
+对称加密
+
+**DES**
+
+AES
+
+
+
+非对称加密，既可以加密也可以实现数字签名
+
+**RSA**
+
+DSA 
+
+ECC
+
+
+
+md5单向加密，加密不可逆，主要用于用户密码的加密。
+
+
+
+### 认证
+
+KPI
+
+数字签名
+
+
+
+### 防火墙
+
+防火墙是建立在内外网络边界上的过滤封锁机制，它认为内部网络是安全和可信赖的，而外部网络是不安全和不可信赖的。防火墙的作用是防止不希望的、未经授权的数据包进出被保护的内部网络，通过边界控制强化内部网络的安全。
+
+1. 包过滤型防火墙：**包过滤型防火墙工作在OSI模型的网络层和传输层**。通过访问控制表，**检查数据流中每个数据包的源地址、目的地址、所用端口号、协议状态等因素**，来确定是否允许该数据包通过。在网络层，对数据包的源及目的IP具有识别和控制作用，对于传输层，它只能识别数据包是TCP还是UDP及所用的端口信息。
+2. 代理服务器型防火墙：代理服务器型防火墙又称应用级防火墙，工作在OSI模型的应用层，是设置在Internet防火墙网关上的应用，是**网管员允许或拒绝的特定的应用程序或者服务**，同时还可应用于实施较强的数据流监控、过滤、记录和报告等功能。应用级防火墙彻底隔断内网与外网的直接通信，内网用户对外网的访问变成防火墙对外网的访问，然后再由防火墙转发给内网用户。
+3. 检测型防火墙：新一代的产品，**能够多各层的数据进行主动地、实时地监测，并在对这些数据进行分析的基础上，能够有效地判断出各层中的非法入侵**。结合了代理服务器防火墙的安全性和包过滤防火墙高速度等优点，在不损失安全性的基础上，将代理服务器防火墙的性能提高了10倍。
+
+防病毒网关是一种网络设备，用以保护网络内(一般是局域网)进出数据的安全。主要体现在病毒杀除、关键字过滤(如色情、反动)、垃圾邮件阻止的功能，同时部分设备也具有一定防火墙(划分Vlan)的功能。如果与互联网相连，就需要网关的防病毒软件。能够检测进出网络内部的数据，对HTTP、FTP、SMTP、IMAP四种协议的数据进行病毒扫描，一旦发现病毒就会采取相应的手段进行隔离或查杀，在防护病毒方面起到了非常大的作用。
+
+
+
+### SQL注入攻击
 
 
 
 
 
-## 加密与认证技术
+## Linux
+
+### 文件结构
+
+常见目录
 
 
 
-## 防火墙技术
+### 常用命令
 
 
-
-## 构建网络服务器
-
-
-
-## Windows系统管理
-
-
-
-## Linux系统管理
 
