--- a/数据结构.md
+++ b/数据结构.md
@@ -1,6 +1,6 @@
 # 数据结构
 
-## 数据结构与算法
+## 基础知识
 
 数据：即信息的载体，是对客观事物的符号表示，指能输入到计算机中并被计算机程序处理的符号的总称。整数，实数，字符，文字，声音，图形，图像等都是数据。
 
@@ -38,7 +38,7 @@
 
 
 
-## 线性表、栈、队列
+## 线性表
 
 线性表有一个开始节点和一个结束节点，其余的内部节点有且仅有一个直接前驱和一个直接后继。
 
@@ -48,13 +48,23 @@
 
 
 
+
+
+
+
+## 栈、队列、数组
+
 **栈的进出原则，先进后出**
 
 **队列栈的进出原则，先进先出**
 
 
 
-## 二叉树
+## 串
+
+
+
+## 树与二叉树
 
 二叉树是一种特殊的树形数据结构，每个节点最多只能有两个子节点（通常称为左子节点和右子节点）。
 
@@ -90,6 +100,8 @@
 - 层序遍历（按层访问）
 
 
+
+## 图
 
 
 
