--- a/408/数据结构.md
+++ b/408/数据结构.md
@@ -1,40 +1,66 @@
 # 数据结构
 
+**算法 + 数据结构 = 程序。**
+
+
+
 ## 基础知识
+
+### 数据的概念
 
 数据：即信息的载体，是对客观事物的符号表示，指能输入到计算机中并被计算机程序处理的符号的总称。整数，实数，字符，文字，声音，图形，图像等都是数据。
 
-数据元素：是数据的基本单位，一般由一个或多个数据项组成。数据项是不可分割的、含有独立意义的最小数据单位。
+数据元素：**是数据的基本单位**，一般由一个或多个数据项组成。数据项是不可分割的、含有独立意义的最小数据单位。
+
+数据项：数据元素中的**单个字段或属性**。 
 
 数据结构：是反映数据元素之间存在一种或多种特定关系的数据元素的集合的表示，即带有结构的数据元素的集合。
 
+数据类型：值的集合和定义在**集合上**的一组**操作的总称**。
 
+原子类型：**值不可再分**的数据类型，如布尔类型、int类型。
 
-数据的基本结构：集合结构、线性结构、树形结构、图形结构。
+结构类型：值可以再分解成若干个分量的数据类型，如结构体。
 
-逻辑上可以分为：线性结构、非线性结构。
-
-数据的存储方式：顺序、链式、索引、散列。
-
-
-
-算法是对特定问题求解步骤的一种描述，是用来解决某个问题的一些指令的集合。它是指令的有限序列，其中每条指令表示一个或多个操作。算法的特性：有穷性、确定性、可行性、输入和输出。评价算法优劣标准：正确性、可读性、健壮性、高效率与低存储量需求。
+抽象数据类型：抽象数据组织和与之相关的操作。定义抽象数据类型时，**不关心具体存储结构，只关心逻辑结构和数据运算**。
 
 
 
-时间复杂度是衡量算法运行时间与输入规模之间关系的一种方法。常见的时间复杂度有：
+### 数据结构三要素
 
-1. **O(1)**：常数时间复杂度，执行时间不随输入规模变化。
-2. **O(log n)**：对数时间复杂度，通常出现在二分查找等算法中。
-3. **O(n)**：线性时间复杂度，执行时间与输入规模成正比。
-4. **O(n log n)**：线性对数时间复杂度，常见于高效的排序算法，如归并排序和快速排序。
-5. **O(n²)**：平方时间复杂度，常见于简单的排序算法，如冒泡排序和选择排序。
-6. **O(2^n)**：指数时间复杂度，通常出现在解决组合问题的递归算法中。
-7. **O(n!)**：阶乘时间复杂度，通常出现在排列问题中。
+#### 逻辑结构
+
+逻辑结构分类：集合、线性结构、树形结构、图状结构。
 
 
 
-**算法十数据结构=程序。**
+#### 物理结构
+
+物理结构分类：顺序存储、链式存储、索引存储、散列存储。
+
+顺序存储：数据元素在物理上必须是**连续的**。
+
+非顺序存储：数据元素在物理上必须是**离散的**。
+
+
+
+#### 数据运算
+
+根据数据的逻辑结构定义需要的运算，不同存储结构下，数据运算的实现方式不同。
+
+
+
+### 算法
+
+算法是对特定问题求解步骤的一种描述，是用来解决某个问题的一些指令的集合。它是指令的有限序列，其中每条指令表示一个或多个操作。算法的特性：**有穷性、确定性、可行性、输入和输出**。评价算法优劣标准：**正确性、可读性、健壮性、高效率与低存储量需求**。
+
+**时间复杂度：度量算法执行时间的多少。** 
+
+**空间复杂度：度量算法执行过程中的内存开销。**
+
+
+
+
 
 
 
