--- a/408/数据结构.md
+++ b/408/数据结构.md
@@ -2,8 +2,6 @@
 
 **算法 + 数据结构 = 程序。**
 
-
-
 ## 基础知识
 
 ### 数据的概念
@@ -56,11 +54,19 @@
 
 **时间复杂度：度量算法执行时间的多少。** 
 
+简化时间复杂度表达式：忽略低阶部分和常数项。多项相加时只保留最高阶的项，相乘时合并为一项。
+
+![image-20241027193414518](https://raw.githubusercontent.com/qinshuxiang/repo/main/算法的时间复杂度.png)
+
+$O(1) \rightarrow O(\log_2 n) \rightarrow O(n) \rightarrow O(n \log_2 n) \rightarrow O(n^2) \rightarrow O(n^3) \rightarrow O(2^n) \rightarrow O(n!)$
+
 **空间复杂度：度量算法执行过程中的内存开销。**
 
+算法执行时，需要内存存放局部变量和参数。执行过程中所需的内存空间大小是固定不变的常数值。
 
+如果算法所需的内存空间与问题规模n无关，则称该算法可以原地工作。
 
-
+函数递归调用会导致内存开销的增加，一般递归调用的空间复杂度为O(n)。
 
 
 
