--- a/408/数据结构.md
+++ b/408/数据结构.md
@@ -72,7 +72,11 @@ $O(1) \rightarrow O(\log_2 n) \rightarrow O(n) \rightarrow O(n \log_2 n) \righta
 
 ## 线性表
 
+线性表是由相同数据类型的n个数据元素组成的有限序列，数据元素之间有线性关系，每个元素有唯一的位序。
+
 线性表有一个开始节点和一个结束节点，其余的内部节点有且仅有一个直接前驱和一个直接后继。
+
+
 
 线性表的顺序存储结构：数组，数组的存储空间是连续的，元素在存储空间按照逻辑顺序依次存放。
 
