--- a/408/数据结构.md
+++ b/408/数据结构.md
@@ -78,11 +78,7 @@ $O(1) \rightarrow O(\log_2 n) \rightarrow O(n) \rightarrow O(n \log_2 n) \righta
 
 线性表的顺序存储结构：数组，数组的存储空间是连续的，元素在存储空间按照逻辑顺序依次存放。
 
-线性表的链式存储结构：链表，有单链表，循环链表，双向链表
-
-
-
-
+线性表的链式存储结构：链表，有单链表，循环链表，双向链表、静态链表。
 
 
 
@@ -95,6 +91,8 @@ $O(1) \rightarrow O(\log_2 n) \rightarrow O(n) \rightarrow O(n \log_2 n) \righta
 
 
 ## 串
+
+串（字符串）是由字符组成的有限序列，每个字符串都有一个名字（串名），以及字符的数量（串长度）。
 
 
 
