--- a/408/数据结构.md
+++ b/408/数据结构.md
@@ -104,9 +104,13 @@ $O(1) \rightarrow O(\log_2 n) \rightarrow O(n) \rightarrow O(n \log_2 n) \righta
 2. 深度为 k 的二叉树至多含有`2^k - 1 `个节点
 3. 对于任意一棵二叉树，度为0的节点比度为2的节点多一个。`n_0 = n_2 + 1`
 
-**完全二叉树**：除了最底层外，每一层都被完全填满，并且最底层的节点尽量向左对齐。
+**完全二叉树**：除了最底层外，每一层都被完全填满，并且最底层的节点尽量向左对齐。完全二叉树只有最后两层可能出现叶子节点。
 
 **满二叉树**：满二叉树的每一层都被完全填满。
+
+**平衡二叉树**：**左子树**节点的值 < 当前节点的值。**右子树**节点的值 > 当前节点的值。
+
+**排序二叉树**：是一种**自平衡**的二叉搜索树，确保任意节点的左右子树高度差不超过1。这保证了树的高度尽量小，避免极端情况下退化为链表。
 
 ``` javascript
 // 完全二叉树
@@ -134,6 +138,23 @@ $O(1) \rightarrow O(\log_2 n) \rightarrow O(n) \rightarrow O(n \log_2 n) \righta
 
 
 ## 图
+
+图是一种非线性数据结构，由一组顶点（或称为节点）和一组边组成。图结构广泛应用于计算机科学和其他领域，如社交网络、地图导航和推荐系统等。
+
+**顶点：**图中的基本单位，代表实体。例如，在社交网络中，顶点可以代表用户。
+
+ **边**
+
+- 连接两个顶点的线，可以是有向的或无向的。
+- 有向边：表示从一个顶点指向另一个顶点。
+- 无向边：表示两个顶点之间的双向关系。
+
+**权重**：边的权重可以表示距离、成本、时间等，用于加权图。
+
+**图的遍历**：
+
+- **深度优先搜索（DFS）**：从一个顶点开始，沿着边尽可能深入到每个分支再回溯。
+- **广度优先搜索（BFS）**：从一个顶点开始，先访问邻接顶点，然后依次访问邻接的邻接顶点。
 
 
 
