--- a/408/数据结构.md
+++ b/408/数据结构.md
@@ -160,11 +160,9 @@ $O(1) \rightarrow O(\log_2 n) \rightarrow O(n) \rightarrow O(n \log_2 n) \righta
 
 ## 查找
 
-线性表
+顺序查找，用于线性表，从头到尾依次查找。
 
-顺序查找
-
-二分查找，如果中间项 `mid = left + (right - left) // 2` 向下取整
+二分查找，适用于有序的顺序表，如果中间项 `mid = (low + high) // 2` 向下取整
 
 ```javascript
 3 6 8 10 12 15 16 18 21 25 30 查找 11
@@ -175,34 +173,74 @@ $O(1) \rightarrow O(\log_2 n) \rightarrow O(n) \rightarrow O(n \log_2 n) \righta
 // 11 不存在
 ```
 
+分块查找主要用于静态顺序表，结合了顺序查找和分块的思想，目的是提高查找效率。
+
+- **原数组**：`[10, 20, 30, 40, 50, 60, 70, 80, 90]`
+- **分块**：`[10, 20, 30]`, `[40, 50, 60]`, `[70, 80, 90]`
+- **块的信息**：`min: [10, 40, 70]`, `max: [30, 60, 90]`
+- 根据要查找的元素值，通过比较最小值和最大值来确定目标元素可能所在的块。在确定的块内进行顺序查找，以找到目标元素。
+
 
 
 ## 排序
 
-直接插入排序
+### 冒泡排序
 
-```javascript
-10 1 9 2 8 4排序
-1 10
-1 9 10
-1 2 9 10
-1 2 8 9 10
-1 2 4 8 9 10
-```
+![冒泡排序](https://raw.githubusercontent.com/qinshuxiang/repo/main/冒泡排序.gif)
 
-希尔排序：选择一个初始间隔 `gap`（一般为数组长度的一半），将数组按间隔分组。对每组使用**插入排序**进行排序。减小间隔，重复步骤2，直到间隔为1。最后进行一次标准的插入排序。
-
-冒泡排序：逐步将最大或最小的元素**冒泡**到一端，遍历数组，相邻元素比较，如果顺序错误就交换，对未排序部分重复上述步骤，直到数组有序。
-
-快速排序：使用分治法，通过选定一个基准元素（pivot）将数组分为两部分递归排序，继续对左右子数组递归执行快速排序。
-
-选择排序：遍历数组找到最小元素，与第一个元素交换，从剩余部分中找到最小元素，与第二个元素交换
-
-归并排序：将数组递归拆分成两个子数组，直到每个子数组只剩一个元素。合并两个有序子数组时，按大小顺序放回原数组。重复直到所有子数组合并完成。
+1. 比较相邻的元素。如果第一个比第二个大，就交换他们两个。
+2. 对每一对相邻元素作同样的工作，从开始第一对到结尾的最后一对。这步做完后，最后的元素会是最大的数。
+3. 针对所有的元素重复以上的步骤，除了最后一个。
+4. 持续每次对越来越少的元素重复上面的步骤，直到没有任何一对数字需要比较。
 
 
 
+### 选择排序
+
+![选择排序](https://raw.githubusercontent.com/qinshuxiang/repo/main/选择排序.gif)
+
+1. 首先在未排序序列中找到最小（大）元素，存放到排序序列的起始位置
+2. **再从剩余未排序元素中继续寻找最小（大）元素，然后放到已排序序列的末尾。**
+3. 重复第二步，直到所有元素均排序完毕。
 
 
 
+### 插入排序
+
+![插入排序](https://raw.githubusercontent.com/qinshuxiang/repo/main/插入排序.gif)
+
+1. 将第一待排序序列第一个元素看做一个有序序列，把第二个元素到最后一个元素当成是未排序序列。
+2. 从头到尾依次扫描未排序序列，将扫描到的每个元素插入有序序列的适当位置。（如果待插入的元素与有序序列中的某个元素相等，则将待插入元素插入到相等元素的后面。）
+
+
+
+### 希尔排序
+
+![希尔排序](https://raw.githubusercontent.com/qinshuxiang/repo/main/希尔排序.gif)
+
+1. 选择一个增量序列 t1，t2，……，tk，其中 ti > tj, tk = 1；
+2. 按增量序列个数 k，对序列进行 k 趟排序；
+3. 每趟排序，根据对应的增量 ti，将待排序列分割成若干长度为 m 的子序列，分别对各子表进行直接插入排序。仅增量因子为 1 时，整个序列作为一个表来处理，表长度即为整个序列的长度。
+
+
+
+### 归并排序
+
+![归并排序](https://raw.githubusercontent.com/qinshuxiang/repo/main/归并排序.gif)
+
+1. 申请空间，使其大小为两个已经排序序列之和，该空间用来存放合并后的序列；
+2. 设定两个指针，最初位置分别为两个已经排序序列的起始位置；
+3. 比较两个指针所指向的元素，选择相对小的元素放入到合并空间，并移动指针到下一位置；
+4. 重复步骤 3 直到某一指针达到序列尾；
+5. 将另一序列剩下的所有元素直接复制到合并序列尾。
+
+
+
+### 快速排序
+
+![快速排序](https://raw.githubusercontent.com/qinshuxiang/repo/main/快速排序.gif)
+
+1. 从数列中挑出一个元素，称为 “基准”（pivot）;
+2. 重新排序数列，所有元素比基准值小的摆放在基准前面，所有元素比基准值大的摆在基准的后面（相同的数可以到任一边）。在这个分区退出之后，该基准就处于数列的中间位置。这个称为分区（partition）操作；
+3. 递归地（recursive）把小于基准值元素的子数列和大于基准值元素的子数列排序；
 
