--- a/080902/数据库与数据挖掘.md
+++ b/080902/数据库与数据挖掘.md
@@ -1,3 +1,7 @@
+# 数据库与数据挖掘
+
+## 数据库
+
 ### 数据库系统
 
 数据管理技术经过了**人工管理、文件系统和数据库系统**三个阶段。
@@ -381,6 +385,10 @@ SQL优化：
 4. JOIN字段建议建立索引。
 5. 避免复杂SQL语句。
 
+
+
+## 数据挖掘
+
 ### 数据仓库
 
 数据仓库是一个面向主题的、集成的、相对稳定的，用于存储大量的历史数据，反映历史变化的数据集合，用于支持管理决策，支持企业进行数据分析、报表和商业智能（BI）。它不同于传统数据库，更关注于查询性能和数据分析，而非事务处理。把**信息加以整理、归纳和重组,并及时提供给对应的管理决策人员是数据仓库的根本任务**。数据仓库的特点：
@@ -424,3 +432,23 @@ SQL优化：
 | 聚类 | K-means、DBSCAN、层次聚类 | 用户分群、市场细分 |
 | 关联规则 | Apriori、FP-Growth | 商品推荐、购物篮分析 |
 | 降维 | 主成分分析、t-SNE | 可视化、高维数据分析 |
+
+
+
+## 补充
+
+Accsee数据库可以不设置主键
+
+
+
+一个Oracle服务器由一个Oracle实例和Oracle数据库组成。
+
+Oracle数据库包括数据文件、控制文件、重做日志文件等。
+
+Oracle实例包括了系统进程和所有用户进程，当然还有一系列内存结构。
+
+Oracle数据库的表空间是逻辑结构。
+
+
+
+数据库都具有事务日志，用于记录所有事务以及每个事务对数据库所做的修改。任何写操作都需要记录日志，因此一旦数据库日志满了，不能执行更改、备份等写操作，只能执行查询等读操作。
