--- a/408/操作系统.md
+++ b/408/操作系统.md
@@ -2,6 +2,8 @@
 
 ## 操作系统概述
 
+微内核操作系统结构是20世纪80年代后期发展起来的，其基本思想是将操作系统中最基本的部分放入内核中，而把操作系统的绝大部分功能都放在微内核外面的一组服务器中实现。该系统具有以下优点：①提高了系统的可扩展性；②增强了系统的可靠性；③增强了系统的可移植性；④提供了对分布式系统的支持；⑤融入了面向对象技术。
+
 
 
 ## 进程与线程
