--- a/408/计算机组成原理.md
+++ b/408/计算机组成原理.md
@@ -2,15 +2,10 @@
 
 
 
-
-
 设置缓冲区的主要目的是缓和CPU的快速与设备的慢速之间的矛盾，若I/O花费时间比CPU处理时问短得多，则没有必要设置缓冲区。
 
 
 
+RAID5是一种存储性能、数据安全和存储成本兼顾的存储解决方案。做RAID5阵列所有磁盘容量必须一样大，当容量不同时，会以最小的容量为准，硬盘转速最好一样，否则也会影响性能。RAID5把数据和相对应的奇偶校验信息存储到组成RAID5的各个磁盘上，其中任意￼块磁盘上都存储完整的数据，也就是说有相当于一块磁盘容量的空间用于存储奇偶校验信息，当RAID5的一个磁盘发生损坏后，不会影响数据的完整性，从而保证了数据安全。
 
-
-信道又被称为通道或频道，是信号在通信系统中传输的通道，信道能无错误传送的最大信息率，称为信道容量。
-
-
-
+> 用6块500G硬盘组成的RAID5阵列，最大容量大概为 500 * （6 - 1）= 2500G 约等于 2.5T
