--- a/补充知识点/网络与信息安全.md
+++ b/补充知识点/网络与信息安全.md
@@ -67,7 +67,27 @@
 宏病毒，word，excel文件
 勒索病毒 445端口
 
+软件中含有一个觉察不出的有害的程序段，当它被执行时，会破坏用户的安全，这种应用程序称为特洛伊木马。
 
+蜜罐技术本质上是一种对攻击方进行欺骗的技术，通过布置一些作为诱饵的主机、网络服务或者信息，诱使攻击方对它们实施攻击，从而可以对攻击行为进行捕获和分析，能够让防御方清晰地了解他们所面对的安全威胁。
+
+
+
+拒绝服务是指通过向服务器发送大量垃圾信息或干扰信息的方式，导致服务器无法向正常用户提供服务的现象。
+
+
+
+IP地址欺骗是一种黑客的攻击形式，黑客使用一台计算机上网,而借用另外一台机器的IP地址,从而冒充另外一台机器与服务器打交道。
+
+
+
+嗅探技术可以获取网络上流经的数据包，口令可以作为数据包被嗅探器捕捉，然后解开这个数据包就可以获取相应信息，实现监听。
+
+将带病毒的存储设备设置为只读状态并不能阻止病毒感染其他计算机或存储设备，通过将病毒本身复制到其他设备即可达到传播的目的。
+
+
+
+“勒索蠕虫”即“WannaCry”病毒，是一种“勒索式”的蠕虫病毒软件，利用Windows操作系统445端口存在的漏洞进行传播，WannaCry主要利用了微软“视窗”系统的漏洞，以获得自动传播的能力，能够在数小时内感染一个系统内的全部电脑。具有自我复制、主动传播的特性。
 
 网络钓鱼
 
@@ -125,11 +145,13 @@ KPI
 
 数字签名
 
+数字签名是只有信息的发送者才能产生的别人无法伪造的一段数字串，这段数字串同时也是对信息的发送者发送信息真实性的一个有效证明，可用于实现身份鉴别。
+
 
 
 ### 防火墙
 
-防火墙是建立在内外网络边界上的过滤封锁机制，它认为内部网络是安全和可信赖的，而外部网络是不安全和不可信赖的。防火墙的作用是防止不希望的、未经授权的数据包进出被保护的内部网络，通过边界控制强化内部网络的安全。
+防火墙是建立在内外网络边界上的过滤封锁机制，它认为内部网络是安全和可信赖的，而外部网络是不安全和不可信赖的。一般而言，Internet防火墙**建立在一个网络的内部网络与外部网络的交叉点**，保护内部网络不受攻击。防火墙的作用是防止不希望的、未经授权的数据包进出被保护的内部网络，通过边界控制强化内部网络的安全。
 
 1. 包过滤型防火墙：**包过滤型防火墙工作在OSI模型的网络层和传输层**。通过访问控制表，**检查数据流中每个数据包的源地址、目的地址、所用端口号、协议状态等因素**，来确定是否允许该数据包通过。在网络层，对数据包的源及目的IP具有识别和控制作用，对于传输层，它只能识别数据包是TCP还是UDP及所用的端口信息。
 2. 代理服务器型防火墙：代理服务器型防火墙又称应用级防火墙，工作在OSI模型的应用层，是设置在Internet防火墙网关上的应用，是**网管员允许或拒绝的特定的应用程序或者服务**，同时还可应用于实施较强的数据流监控、过滤、记录和报告等功能。应用级防火墙彻底隔断内网与外网的直接通信，内网用户对外网的访问变成防火墙对外网的访问，然后再由防火墙转发给内网用户。
@@ -149,7 +171,34 @@ KPI
 
 ### 文件结构
 
-常见目录
+| **目录** | **说明**                                                    |
+| -------- | ----------------------------------------------------------- |
+| `/`      | 根目录，所有文件和目录的起始点。                            |
+| `/bin`   | 包含用户可执行的基本命令和程序。                            |
+| `/boot`  | 存放启动 Linux 系统所需的文件，包括内核和启动加载器。       |
+| `/dev`   | 包含设备文件，表示系统中的各种硬件设备。                    |
+| `/etc`   | 存放系统配置文件和管理相关文件。                            |
+| `/home`  | 用户的主目录，存放个人文件和配置。                          |
+| `/lib`   | 包含系统运行所需的共享库文件。                              |
+| `/media` | 自动挂载的可移动介质的挂载点。                              |
+| `/mnt`   | 临时挂载文件系统的目录。                                    |
+| `/opt`   | 存放额外安装的软件包和应用程序。                            |
+| `/proc`  | 虚拟文件系统，提供关于系统和进程的信息。                    |
+| `/root`  | 超级用户（root 用户）的主目录。                             |
+| `/sbin`  | 包含系统管理员使用的可执行命令。                            |
+| `/srv`   | 存放服务数据的目录。                                        |
+| `/sys`   | 提供内核与用户空间之间的接口的虚拟文件系统。                |
+| `/tmp`   | 存放临时文件的目录。                                        |
+| `/usr`   | 用户级程序和数据的主要目录，包括 `/usr/bin` 和 `/usr/lib`。 |
+| `/var`   | 存放可变数据的目录，如日志文件、缓存等。                    |
+
+/etc/hostname文件包含了系统的主机名称，包括完全的域名。
+
+/etc/hosts文件是Linux系统上一个**负责IP地址与域名快速解析的文件**，文件包含了IP地址与主机名之间的映射。
+
+/etc/resolv.conf是DNS客户机配置文件，用于设置DNS服务器的IP地址及DNS域名，还包含了主机的域名搜索顺序。
+
+/etc/sysconfig/network文件，该文件用来指定服务器上的网络配置信息。
 
 
 
