--- a/408/计算机组成原理.md
+++ b/408/计算机组成原理.md
@@ -1,3 +1,35 @@
+# 计算机组成原理
+
+## 概述
+
+
+
+## 数据的表示和运算
+
+
+
+## 存储系统
+
+
+
+## 指令系统
+
+
+
+## 中央处理器
+
+
+
+## 总线
+
+
+
+## 输入输出系统
+
+
+
+## 补充
+
 高速缓冲存储器（Cache）是位于CPU和主存储器之间，规模较小，但速度很高的存储器，通常由SRAM组成。由于CPU的速度比主存快的多，所以引入Cache，用来存放一些CPU可能会用到的数据，减少了CPU的等待时间，所以Cache解决CPU和主存之间的速度匹配问题。
 
 
