--- a/408/计算机组成原理.md
+++ b/408/计算机组成原理.md
@@ -2,33 +2,104 @@
 
 ## 概述
 
+### 计算机发展历程
 
+计算机 = 硬件 + 软件，软件包含系统软件与应用软件。
+
+> 系统软件包括：操作系统、数据库管理系统、标准程序库、网络软件、语言处理程序、服务程序
+
+**计算机组成原理就是在研究计算机硬件的底层协调和工作方式**。其中，**计算机硬件包括CPU、内存、外存、显卡等部件**，而操作系统和应用软件安装在计算机硬件之上，通过计算机网络实现计算机之间的信息互联互通。
+
+CPU：型号和性能决定游戏图像处理速度。有金属针脚，用于传递数据信息。
+
+内存：大小影响多应用程序的流畅性。有金属针脚，用于传递数据信息。**CPU和内存之间的数据交换通过主板上的印刷电路板传输二进制信息。**
+
+外存：容量决定手机或电脑中可存储的电影数量。有金属针脚，用于传递数据信息。
+
+显卡：性能影响游戏图像处理。
+
+1. 第一代计算机采用**电子管**作为逻辑元件，**使用计算机语言编程**，使用穿孔卡片、纸带。
+2. 第二代计算机采用**晶体管**替代电子管，**出现高级编程语言**，**有了操作系统雏形**。
+3. 第三代计算机采用**中小规模集成电路**。
+4. 第四代计算机采用**大规模和超大规模集成电路**，微处理器和微型计算机诞生。
+
+摩尔定律指出集成电路上的晶体管数目**每隔两年左右增加一倍**。摩尔定律不仅应用于**处理器**，也适用于**存储器**的发展。摩尔定律推动了计算机硬件的快速发展，包括处理器和存储器的性能提升。
+
+
+
+### 计算机系统层次结构
+
+#### 计算机系统的基本组成
+
+
+
+#### 计算机硬件的基本组成
+
+
+
+#### 计算机软件和硬件的关系
+
+
+
+#### 计算机的工作过程
+
+
+
+##### 冯诺伊曼
+
+1.冯诺依曼结构计算机的硬件结构包括输入设备、运算器、控制器、主存储器和输出设备。 2.数据和程序指令以二进制形式同等地存放在存储器中。 3.指令由操作码和地址码组成，操作码指明操作类型，地址码指明操作数据的位置。 4.计算机根据存储器中的指令序列一条一条地执行，实现程序的自动化执行。
+
+
+
+### 计算机的性能指标
+
+吞吐量、响应时间;CPU 时钟周期、主频、CPI、CPU 执行时间;MIPS、MFLOPS 、GFLOPS、TFLOPS、PFLOPS。
 
 ## 数据的表示和运算
 
+### 数制与编码
 
+1.进位计数制及其相互转换 2.真值和机器数 3.BCD 码 4.字符与字符串 5.校验码
+
+### 定点数的表示和运算
+
+1.定点数的表示 无符号数的表示;有符号整数的表示。 2.定点数的运算 定点数的位移运算;原码定点数的加减运算;补码定点数的加/减运算;定点数 - 6 - 的乘/除运算;溢出概念和判别方法。
+
+### 浮点数的表示和运算
+
+1.浮点数的表示 IEEE 754 标准 2.浮点数的加/减运算
+
+### 算术逻辑单元 ALU
+
+1.串行加法器和并行加法器 2.算术逻辑单元 ALU 的功能和结构
 
 ## 存储系统
 
-
-
-## 指令系统
-
-
-
-## 中央处理器
+### 存储器的分类
 
 
 
-## 总线
+### 存储器的层次化结构
 
 
 
-## 输入输出系统
+### 半导体随机存取存储器
+
+1.SRAM 存储器 2.DRAM 存储器 3.只读存储器 4.Flash 存储器
+
+### 主存储器与 CPU 的连接
 
 
 
-## 补充
+### 双口 RAM 和多模块存储器
+
+
+
+### 高速缓冲存储器
+
+1.Cache 的基本工作原理 2.Cache 和主存之间的映射方式 3.Cache 中主存块的替换算法 4.Cache 写策略
+
+
 
 高速缓冲存储器（Cache）是位于CPU和主存储器之间，规模较小，但速度很高的存储器，通常由SRAM组成。由于CPU的速度比主存快的多，所以引入Cache，用来存放一些CPU可能会用到的数据，减少了CPU的等待时间，所以Cache解决CPU和主存之间的速度匹配问题。
 
@@ -41,3 +112,77 @@
 RAID5是一种存储性能、数据安全和存储成本兼顾的存储解决方案。做RAID5阵列所有磁盘容量必须一样大，当容量不同时，会以最小的容量为准，硬盘转速最好一样，否则也会影响性能。RAID5把数据和相对应的奇偶校验信息存储到组成RAID5的各个磁盘上，其中任意￼块磁盘上都存储完整的数据，也就是说有相当于一块磁盘容量的空间用于存储奇偶校验信息，当RAID5的一个磁盘发生损坏后，不会影响数据的完整性，从而保证了数据安全。
 
 > 用6块500G硬盘组成的RAID5阵列，最大容量大概为 500 * （6 - 1）= 2500G 约等于 2.5T
+
+### 虚拟存储器
+
+1.虚拟存储器的基本概念 2.页式虚拟存储器 3.段式虚拟存储器 4.段页式虚拟存储器 5.TLB(快表)
+
+## 指令系统
+
+### 指令格式
+
+1.指令的基本格式 2.定长操作码指令格式 3.扩展操作码指令格式
+
+### 指令的寻址方式
+
+1.有效地址的概念 2.数据寻址和指令寻址 3.常见寻址方式
+
+### CISC 和 RISC 的基本概念
+
+
+
+## 中央处理器
+
+### CPU 的功能和基本结构
+
+
+
+### 指令执行过程
+
+
+
+### 数据通路的功能和基本结构
+
+
+
+### 控制器的功能和工作原理
+
+1、硬布线控制器 2、微程序控制器 微程序、微指令和微命令;微指令的编码方式;微地址的形式方式。
+
+### 指令流水线
+
+1、指令流水线的基本概 2、指令流水线的基本实现 3、超标量和动态流水线的基本概念
+
+## 总线
+
+### 总线概述
+
+1、总线的基本概念 2、总线的分类 3、总线的组成及性能指
+
+### 总线仲裁
+
+1、集中仲裁方式 2、分布仲裁方式
+
+### 总线操作和定时 
+
+1、同步定时方式 2、异步定时方式
+
+### 总线标准
+
+
+
+## 输入输出系统
+
+### I/O 系统基本概念
+
+### 外部设备 
+
+1、输入设备：键盘、鼠标 2、输出设备：显示器、打印机 3、外存储器：硬盘存储器、磁盘阵列、光盘存储器
+
+### I/O 接口
+
+1、I/O 接口的功能和基本结构 2、I/O 端口及其编址
+
+### I/O 方式
+
+1、程序查询方式 2、程序中断方式 中断的基本概念;中断响应过程;中断处理过程;多重中断和中断屏蔽的概念。3、DMA 方式 DMA 控制器的组成，DMA 传送过程。
