--- a/408/操作系统.md
+++ b/408/操作系统.md
@@ -2,11 +2,77 @@
 
 ## 概述
 
-### 操作系统的概念、特征、功能和提供的服务
+### 概念、特征、功能
+
+#### 操作系统的概念
+
+计算机系统中的软件通常分为**系统软件**和**应用软件**两大类。
+
+应用软件是指计算机用户利用计算机的软件、硬件资源为某一专门的应用目的开发的软件。例如，科学计算、工程设计、数据处理、事务处理和过程控制等方面的软件，以及文字处理软件、表格处理软件、辅助设计软件和实时处理软件等。
+
+系统软件是计算机系统的一部分，由它支持应用软件的运行。常用的系统软件有**操作系统、语言处理程序、链接程序、诊断程序和数据库管理系统**等。
+
+**操作系统是计算机系统中必不可少的核心系统软件**，集中了**资源管理功能**和**控制程序执行功能**，是**用户和计算机之间的接口**。能有效地组织和管理计算机系统中的硬件和软件资源，合理组织计算机工作流程，控制程序的执行，并向用户提供各种服务功能。
+
+
+
+#### 操作系统的特征
+
+作为一种系统软件，操作系统有**并发性、共享性和随机性的特征**。
+
+1. **并发性**：在多道程序环境下，并发性是指两个或多个事件在同一时间间隔内发生，即宏观上有多道程序同时执行，**而微观上，在单处理机系统中每一个时刻仅能执行一道程序**。
+2. 共享性：共享指系统中的资源在一个时间段内可被多个并发执行的进程使用。
+3. 随机性：也称不确定性，是指操作系统的运行是在一种随机的环境下进行的，充分考虑各种各样的可能性，稳定、高效地控制资源的使用和程序的运行。
+
+> 若一个单处理机系统中有多个进程存在，则这些进程是并发运行的。
+
+
+
+#### 操作系统的功能
+
+从资源管理的观点来看，操作系统的功能可以分为**进程管理(处理机管理)、存储管理、文件管理、设备管理和作业管理(命令接口)**5大部分。操作系统的5大部分通过相互配合、协调工作，以实现对计算机系统中资源的管理，控制任务的运行。
+
+1. **进程管理**：实质是对处理器管理，主要任务是对进程的控制、同步、通信以及调度。
+2. **存储管理**：主要任务是管理计算机内存资源。
+3. **文件管理**：主要任务是有效地支持文件的存储、检索和修改等操作。
+4. **设备管理**：对所有输入、输出设备的管理。
+5. **接口管理**: 命令接口、程序接口、图形接口。
 
 
 
 ### 操作系统的发展与分类
+
+#### 操作系统的发展
+
+操作系统从最初20世纪50年代的手工操作阶段，到早期的批处理程序，再到多道批处理系统、分时系统、实时系统，以及后来的个人操作系统、网络操作系统、分布式操作系统、嵌入式操作系统、智能卡操作系统等，经历了较复杂的发展的历程。
+
+
+
+#### 操作系统的分类
+
+**按照用户界面的使用环境和功能特征，分为三种：批处理系统、分时系统、实时系统**。
+
+**Linux、UNIX系统属于多任务多用户，分时系统，是网络操作系统。**
+
+##### 1. 批处理系统
+
+用户将作业交给操作员，在收到一定数量的作业后，由操作员把这批作业输入到计算机，最后将结果交给用户。自动化较高，资源利用率高，作业吞吐量大，提高整个系统效率。用户不直接与计算机交互，不适合调试程序。
+
+##### 2. 分时系统
+
+用户通过终端交互式地向系统提出命令，系统接受命令之后，采用时间片轮转方式处理服务请求。把处理机的响应时间分成若干个大小相等(或不相等)的时间单位，称为时间片，每个终端用户获得 CPU，就等于获得一个时间片，该用户程序开始运行，当时间片到(用完)，用户程序暂停运行，等待下一次运行。
+
+特性：多路性:多个用户在同时使用一台计算机。交互性:用户直接干预操作的每一步。独占性:用户感觉不到计算机为他人服务。及时性:系统能对用户提出的请求及时给予响应。
+
+##### 3. 实时系统
+
+实时系统是指系统能及时响应外部事件的请求，在规定的时间内，完成对该事件的处理，并控制所有实时任务协调一致地运行。
+
+第一类：硬实时系统(实时过程控制)，工业控制，军事控制等。
+
+第二类：软实时系统(实时通信和信息处理)，电讯(自动交换)，银行，飞机订票，股市行情等。
+
+特征：多路性、独立性、及时性、交互性和可靠性。
 
 
 
@@ -184,6 +250,12 @@
 
 ##### 程序装入与链接
 
+**计算机系统中的存储器可分成两类：内存、外存**。
+
+**处理器可以直接访问内存，但不能直接访问外存**。CPU要通过启动相应的I/0设备后才能使外存与内存交换信息。内存管理是操作系统的重要功能之一，对内存管理的好坏直接影响计算机系统工作性能的高低。
+
+存储系统三要素：容量、速度、成本。
+
 
 
 ##### 逻辑地址与物理地址空间
@@ -261,6 +333,12 @@
 ### 文件系统基础
 
 #### 文件概念
+
+操作系统必须提供的数据存储、数据处理、数据管理的基本功能，这些功能都是以文件形式进行处理和管理的。文件系统是操作系统的一个重要组成部分。
+
+文件是指存放在存储介质上的已命名的一组相关信息的集合，通常将程序和数据组织成文件。文件中的基本访问单位是位、字节或记录。文件的属性包括文件类型、文件长度、文件的物理位置、文件的存取控制、文件的建立时间。文件是一种抽象机制，它提供了一种把信息保存在存储介质上而且便于以后存取的方法，用户不用关心文件的实现细节。
+
+文件系统是操作系统中统一管理信息资源的一种软件。它管理文件的存储、检索、更新，提供安全可靠的共享和保护手段，并且方便用户使用。从用户的角度，**文件系统实现“按名存取”，通过文件目录查找**，主要关心文件由什么组成，如何命名，如何保护，如何操作等。
 
 
 
@@ -365,3 +443,8 @@
 
 
 #### 假脱机技术
+
+
+
+## 接口管理
+
