--- a/408/操作系统.md
+++ b/408/操作系统.md
@@ -218,6 +218,10 @@
 
 #### 死锁的概念
 
+**死锁**：是指多个进程因竞争资源而造成的一种僵局现象，若无外力的作用，这些进程都不能继续执行。死锁进程至少有两个。
+
+**活锁**：是指数据资源释放时间不确定，导致某些事务长时间等待，得不到封锁的机会。
+
 
 
 #### 死锁处理策略
@@ -339,6 +343,40 @@
 文件是指存放在存储介质上的已命名的一组相关信息的集合，通常将程序和数据组织成文件。文件中的基本访问单位是位、字节或记录。文件的属性包括文件类型、文件长度、文件的物理位置、文件的存取控制、文件的建立时间。文件是一种抽象机制，它提供了一种把信息保存在存储介质上而且便于以后存取的方法，用户不用关心文件的实现细节。
 
 文件系统是操作系统中统一管理信息资源的一种软件。它管理文件的存储、检索、更新，提供安全可靠的共享和保护手段，并且方便用户使用。从用户的角度，**文件系统实现“按名存取”，通过文件目录查找**，主要关心文件由什么组成，如何命名，如何保护，如何操作等。
+
+对不同的文件进行分类管理，提高系统效率，同时提高文件系统的用户界面友好性。
+
+按文件的用途分类：系统文件、库函数文件、用户文件。
+
+按文件的组织形式分类：普通文件、目录文件、特殊文件。
+
+按文件中的保护方式分类：只读文件、读写文件、可执行文件、无保护文件等。
+
+按照文件的组织结构分类：
+
+- **逻辑结构：无结构的流式文件和有结构的记录式文件。**
+- **物理结构：顺序文件、链接文件和索引文件。**
+
+
+
+文件目录是指存放文件有关信息的一种数据结构。它包含多条记录，每条记录为一个文件的**文件控制块(FCB)**的有关信息。最简单的记录包含文件名和文件的起始地址，用以建立文件名和存储地址的对应关系。文件目录是文件实现按名存取的重要手段，是文件符号名到文件物理地址之间的一种映射机制。
+文件控制块FCB:是文件存在的标志，记录了系统管理文件所需要的全部信息，包括**文件名**、文件号、用户名、文件物理地址、文件长度、记录大小、文件类型、文件属性、共享说明、文件逻辑结构、物理结构、文件的建立时间、最后访问时间、最后修改时间、保存期限、口令等。
+
+**操作系统通过 FCB 文件管理** 
+
+操作系统通过 PCB 进程管理 
+
+
+
+Windows系统中，用户A对一个文件有读、写的权限，而A对于这个文件所在的文件夹只有读权限，用户A最终对这个文件将具备读权限。
+
+数字表示不同用户或用户组的权限。第一个数字代表档案拥有者，第二个数字代表群组，第三个数字代表其他。在Linux中我们有三种常用权限：可读、可写以及可执行，用数字表示的话就是：可读=4，可写=2，可执行=1。
+
+
+
+文件保护是指避免由于自然灾祸、系统故障、用户使用不当等原因使文件遭到破坏或丢失的现象。文件系统通常采用**建立副本、定时转储、规定文件的存储权限**的方法保护文件。
+
+文件保密是指文件本身不得被未授权的用户访问，即防止他人窃取文件。实现文件保密采用的方法有：隐藏文件目录、设置口令、文件加密。
 
 
 
