--- a/408/操作系统.md
+++ b/408/操作系统.md
@@ -220,7 +220,14 @@
 
 **死锁**：是指多个进程因竞争资源而造成的一种僵局现象，若无外力的作用，这些进程都不能继续执行。死锁进程至少有两个。
 
+死锁的原因：
+
+1. 竞争资源。当系统中供多个进程共享的资源不足以同时满足它们的需求时，引起它们对资源的竞争而产生死锁。
+2. 进程推进顺序不合理。进程在运行过程中，请求和释放资源的顺序不当，会导致进程死锁。
+
 **活锁**：是指数据资源释放时间不确定，导致某些事务长时间等待，得不到封锁的机会。
+
+**饥饿**：是指系统没有发生死锁，但某些进程可能会长时间等待，当等待时间给进程推进和响应带来明显影响时，称进程饥饿。
 
 
 
