--- a/080902/数据库与数据挖掘.md
+++ b/080902/数据库与数据挖掘.md
@@ -178,6 +178,11 @@ SELECT name, salary FROM employee WHERE department = 'Sales' ORDER BY salary DES
 SELECT department, AVG(salary) AS avg_salary FROM employee GROUP BY department HAVING avg_salary > 50000;
 ```
 
+> WHERE：在数据分组前过滤数据，不能使用聚合函数。
+> HAVING：在数据分组后过滤数据，通常与聚合函数结合使用。
+>
+> 
+>
 > **在索引列上做计算、函数、类型转换，会导致索引失效而转向全表扫描**，如substr（）。相反利用索引可以加快搜索速度。
 >
 > 
